--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <body>
 
 <header>
-    <h1>📘 CSE Blogging Hub</h1>
-    <p>A Clean & Simple Static Website For Your Blog Posts</p>
+    <h1>📘 CSE Concepts</h1>
+    <p>A Clean & Simple Static Website For Posts On Different Computer Science Concepts!</p>
 </header>
 
 <div class="container">
