--- a/Programming/C/c.html
+++ b/Programming/C/c.html
@@ -26,7 +26,7 @@
 <body>
 
 <h1>C Programming  – Blog Posts</h1>
-<a href="../index.html">⬅ Back to Home</a>
+<a href="../../index.html">Back To Home</a>
 <hr>
 
 <!-- *************************************************************
