Updated Wordings In The Sentence To Make It More Understandable To Reader.

--- a/Programming/C/NoCallByReferenceInCItIsCallByAddressOrPointer.html
+++ b/Programming/C/NoCallByReferenceInCItIsCallByAddressOrPointer.html
@@ -79,12 +79,13 @@
     </h1>
 
     <h2>Introduction</h2>
-    <p>
-      If you ask ten people how C passes variables to functions, at least five
-      of them will say:
-    </p>
+  <p>
+  If we show code like <code>foo(&variable);</code> and ask ten people,
+  “Which parameter passing mechanism is this?”, at least five of them will
+  immediately say:
+  </p>
 
-    <pre><code>C uses call by reference</code></pre>
+  <pre><code>This is call by reference</code></pre>
 
     <p class="important">
       This statement is wrong.
