--- a/Programming/C/NoCallByReferenceInCItIsCallByAddressOrPointer.html
+++ b/Programming/C/NoCallByReferenceInCItIsCallByAddressOrPointer.html
@@ -230,7 +230,7 @@ address of a = 0x2000
       Inside the function, we write:
     </p>
 
-    <pre><code>*x = 100;</code></pre>
+    <pre><code>*x = 100; // `Note` *x = 100; Means: 0x2000 = 100;</code></pre>
 
     <p>
       This means:
